--- a/articles.html
+++ b/articles.html
@@ -61,4 +61,35 @@
 </head>
 <body>
   <header>
-    <h1>Test
+    <h1>TestoFit</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="articles.html">Articles</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Latest Articles</h2>
+
+    <div class="article-card">
+      <h3><a href="testosterone-guide.html">Ultimate Guide to Testosterone</a></h3>
+      <p>A deep dive into what testosterone is, why it matters, and how to naturally boost it.</p>
+    </div>
+
+    <div class="article-card">
+      <h3><a href="foods-that-boost-testosterone.html">Top 10 Foods That Boost T</a></h3>
+      <p>Eat your way to hormonal balance with these research-backed testosterone-friendly foods.</p>
+    </div>
+
+    <div class="article-card">
+      <h3><a href="fitness-routine-for-men.html">Best Fitness Routine for Men in Their 20s & 30s</a></h3>
+      <p>Want to build muscle, shred fat, and optimize your hormones? Start here.</p>
+    </div>
+
+  </main>
+  <footer>
+    &copy; 2025 TestoFit. All rights reserved.
+  </footer>
+</body>
+</html>
