--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
     h1 {
       margin-top: 0;
     }
+    section h3 {
+      margin-top: 2rem;
+      margin-bottom: 0.5rem;
+    }
+    ul {
+      list-style-type: disc;
+      padding-left: 20px;
+    }
+    ul li {
+      margin-bottom: 0.5rem;
+    }
     footer {
       background-color: #111;
       color: white;
@@ -52,15 +63,24 @@
     <h1>TestoFit</h1>
     <nav>
       <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="articles.html">Articles</a>
-  <a href="contact.html">Contact</a>
+      <a href="about.html">About</a>
+      <a href="articles.html">Articles</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
   <main>
     <h2>Welcome to TestoFit</h2>
     <p>Your go-to blog for testosterone, fitness, and men’s health insights.</p>
     <p>Explore expert guides, nutrition tips, workout routines, and more.</p>
+
+    <section>
+      <h3>Latest Articles</h3>
+      <ul>
+        <li><a href="testosterone-guide.html">Ultimate Guide to Testosterone</a></li>
+        <li><a href="foods-that-boost-testosterone.html">Top 10 Foods That Boost Testosterone</a></li>
+        <li><a href="fitness-routine-for-men.html">Best Fitness Routine for Men in Their 20s & 30s</a></li>
+      </ul>
+    </section>
   </main>
   <footer>
     &copy; 2025 TestoFit. All rights reserved.
