--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </header>
   <main>
     <h2>Welcome to TestoFit</h2>
-    <p>Your go-to blog for testosterone, fitness, and men’s health insights.</p>
+    <p>Your go-to source for testosterone, fitness, and men’s health insights.</p>
     <p>Explore expert guides, nutrition tips, workout routines, and more.</p>
 
     <section>
