--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
     </section>
   </main>
   <footer>
+    <p style="font-size: 0.9rem; color: #666; margin-top: 2rem; text-align: center;">
+    <em>Disclosure: Some of the links on this site are affiliate links. If you make a purchase through these links, we may earn a commission at no extra cost to you.</em>
+  </p>
+  <p style="color: #666; text-align: center; margin-top: 0.5rem;">
     &copy; 2025 TestoFit. All rights reserved.
+  </p>
   </footer>
 </body>
 </html>
