--- a/index.html
+++ b/index.html
@@ -50,11 +50,16 @@
       margin-bottom: 0.5rem;
     }
     footer {
-      background-color: #111;
-      color: white;
-      text-align: center;
-      padding: 1rem;
       margin-top: 2rem;
+    }
+    footer p {
+      text-align: center;
+      color: #666;
+      font-size: 0.9rem;
+      margin: 0.2rem 0;
+    }
+    footer p em {
+      font-style: italic;
     }
   </style>
 </head>
@@ -83,12 +88,8 @@
     </section>
   </main>
   <footer>
-    <p style="font-size: 0.9rem; color: #666; margin-top: 2rem; text-align: center;">
-    <em>Disclosure: Some of the links on this site are affiliate links. If you make a purchase through these links, we may earn a commission at no extra cost to you.</em>
-  </p>
-  <p style="color: #666; text-align: center; margin-top: 0.5rem;">
-    &copy; 2025 TestoFit. All rights reserved.
-  </p>
+    <p><em>Disclosure: Some of the links on this site are affiliate links. If you make a purchase through these links, we may earn a commission at no extra cost to you.</em></p>
+    <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
 </html>
