--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact | TestoFit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contact - TestoFit</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Outfit', sans-serif;
       margin: 0;
-      padding: 0;
       background-color: #f4f4f4;
       color: #333;
     }
@@ -23,44 +22,25 @@
       color: white;
       margin: 0 15px;
       text-decoration: none;
+      font-weight: 600;
     }
     nav a:hover {
       text-decoration: underline;
     }
     main {
-      padding: 2rem;
-      max-width: 800px;
+      max-width: 600px;
       margin: auto;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    input, textarea {
-      padding: 0.8rem;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
-    button {
-      background-color: #111;
-      color: white;
-      padding: 0.8rem;
-      border: none;
-      border-radius: 6px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #333;
+      padding: 2rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.05);
+      text-align: center;
     }
     footer {
-      background-color: #111;
-      color: white;
-      text-align: center;
-      padding: 1rem;
       margin-top: 2rem;
+      text-align: center;
+      color: #666;
+      font-size: 0.9rem;
     }
   </style>
 </head>
@@ -70,22 +50,17 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
+      <a href="articles.html">Articles</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
   <main>
     <h2>Contact Us</h2>
-    <p>If you have questions, suggestions, or want to connect, feel free to send us a message below.</p>
-
-    <form action="#" method="post">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+    <p>If you have questions, feedback, or want to get in touch, feel free to email us:</p>
+    <p><a href="mailto:dakotaisok1@gmail.com" style="color:#111; font-weight:600; text-decoration:none;">dakotaisok1@gmail.com</a></p>
   </main>
   <footer>
-    &copy; 2025 TestoFit. All rights reserved.
+    <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
 </html>
