--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,15 @@
     }
     footer {
       margin-top: 2rem;
-      text-align: center;
+      padding: 1rem 0;
+      background-color: #f9f9f9;
+      border-top: 1px solid #ddd;
       color: #666;
       font-size: 0.9rem;
+      text-align: center;
+    }
+    footer p {
+      margin: 0.5rem 0;
     }
   </style>
 </head>
@@ -60,6 +66,7 @@
     <p><a href="mailto:dakotaisok1@gmail.com" style="color:#111; font-weight:600; text-decoration:none;">dakotaisok1@gmail.com</a></p>
   </main>
   <footer>
+    <p><em>Disclosure: Some of the links on this site are affiliate links. If you make a purchase through these links, we may earn a commission at no extra cost to you.</em></p>
     <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
