--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
     }
     footer {
       margin-top: 2rem;
-    }
-    footer p {
-      text-align: center;
+      padding: 1rem 0;
+      background-color: #f9f9f9;
+      border-top: 1px solid #ddd;
       color: #666;
       font-size: 0.9rem;
-      margin: 0.2rem 0;
+      text-align: center;
+    }
+    footer p {
+      margin: 0.5rem 0;
     }
     footer p em {
       font-style: italic;
