--- a/foods-that-boost-testosterone.html
+++ b/foods-that-boost-testosterone.html
@@ -2,16 +2,76 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Top 10 Foods That Boost Testosterone | TestoFit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Top 5 Foods That Boost Testosterone - TestoFit</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
-    body { font-family: 'Outfit', sans-serif; margin: 0; background: #f4f4f4; color: #333; }
-    header, footer { background: #111; color: white; text-align: center; padding: 1rem; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; }
-    nav a:hover { text-decoration: underline; }
-    main { max-width: 800px; margin: auto; padding: 2rem; background: white; border-radius: 10px; box-shadow: 0 0 8px rgba(0,0,0,0.05); }
-    h1 { margin-top: 0; }
+    body {
+      font-family: 'Outfit', sans-serif;
+      margin: 0;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background-color: #111;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.05);
+    }
+    h1 {
+      margin-top: 0;
+    }
+    p {
+      line-height: 1.6;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 1rem;
+    }
+    .affiliate-link {
+      display: inline-block;
+      background: #111;
+      color: #fff;
+      padding: 8px 16px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: 600;
+      margin-top: 5px;
+    }
+    footer {
+      margin-top: 2rem;
+      padding: 1rem 0;
+      background-color: #f9f9f9;
+      border-top: 1px solid #ddd;
+      color: #666;
+      font-size: 0.9rem;
+      text-align: center;
+    }
+    footer p {
+      margin: 0.5rem 0;
+    }
+    footer p em {
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
@@ -25,23 +85,34 @@
     </nav>
   </header>
   <main>
-    <h1>Top 10 Foods That Boost Testosterone</h1>
-    <p>Your diet plays a huge role in hormone health. Here are 10 foods that are proven to help boost testosterone naturally:</p>
-    <ol>
-      <li><strong>Eggs</strong> – Rich in healthy fats and vitamin D</li>
-      <li><strong>Oysters</strong> – High in zinc, essential for T production</li>
-      <li><strong>Spinach</strong> – Magnesium supports hormonal balance</li>
-      <li><strong>Avocados</strong> – Packed with monounsaturated fats</li>
-      <li><strong>Olive oil</strong> – Great for testosterone and heart health</li>
-      <li><strong>Fatty fish</strong> (salmon, mackerel) – Omega-3s and vitamin D</li>
-      <li><strong>Brazil nuts</strong> – Selenium-rich superfood</li>
-      <li><strong>Garlic</strong> – Lowers cortisol, which can indirectly raise T</li>
-      <li><strong>Beef liver</strong> – Nutrient powerhouse for men</li>
-      <li><strong>Pomegranates</strong> – Linked to better testosterone and mood</li>
-    </ol>
+    <h1>Top 5 Foods That Boost Testosterone</h1>
+    <p>Boost your testosterone naturally with these nutrient-rich foods. Here are the top five foods known to support healthy testosterone levels:</p>
+    <ul>
+      <li>
+        <strong>Eggs</strong> – Vital Farms Pasture-Raised Eggs provide natural protein and cholesterol needed for hormone production.  
+        <a href="https://www.amazon.com/dp/B01MZHDHVM?tag=testofit-20" target="_blank" rel="noopener noreferrer" class="affiliate-link">Buy Vital Farms Eggs on Amazon</a>
+      </li>
+      <li>
+        <strong>Oysters</strong> – Crown Prince Natural Smoked Oysters are packed with zinc, a key mineral for testosterone synthesis.  
+        <a href="https://www.amazon.com/dp/B004XM4LEW?tag=testofit-20" target="_blank" rel="noopener noreferrer" class="affiliate-link">Shop Smoked Oysters on Amazon</a>
+      </li>
+      <li>
+        <strong>Fatty Fish (Omega-3)</strong> – Nature Made Omega-3 Softgels support hormone balance and heart health.  
+        <a href="https://www.amazon.com/dp/B0046XC528?tag=testofit-20" target="_blank" rel="noopener noreferrer" class="affiliate-link">Buy Nature Made Fish Oil</a>
+      </li>
+      <li>
+        <strong>Avocado Oil</strong> – BetterBody Foods Refined Avocado Oil provides healthy fats beneficial for hormone health.  
+        <a href="https://www.amazon.com/dp/B01IQ00B04?tag=testofit-20" target="_blank" rel="noopener noreferrer" class="affiliate-link">Shop Avocado Oil on Amazon</a>
+      </li>
+      <li>
+        <strong>Garlic Supplement</strong> – NOW Supplements Garlic Oil 1500 mg supports cortisol reduction and hormone balance.  
+        <a href="https://www.amazon.com/dp/B000MGOXAA?tag=testofit-20" target="_blank" rel="noopener noreferrer" class="affiliate-link">Buy Garlic Oil Supplements</a>
+      </li>
+    </ul>
   </main>
   <footer>
-    &copy; 2025 TestoFit. All rights reserved.
+    <p><em>Disclosure: Some links are affiliate links. Purchases may earn us a commission at no extra cost to you.</em></p>
+    <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
 </html>
