--- a/articles.html
+++ b/articles.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Articles | TestoFit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Articles - TestoFit</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Outfit', sans-serif;
       margin: 0;
-      padding: 0;
       background-color: #f4f4f4;
       color: #333;
     }
@@ -23,39 +22,61 @@
       color: white;
       margin: 0 15px;
       text-decoration: none;
+      font-weight: 600;
     }
     nav a:hover {
       text-decoration: underline;
     }
     main {
-      padding: 2rem;
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
-    }
-    .article-card {
-      background-color: white;
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
+      padding: 2rem;
+      background: white;
       border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 0 8px rgba(0,0,0,0.05);
     }
-    .article-card h3 {
+    h1 {
+      margin-top: 0;
+      font-weight: 800;
+      font-size: 2.2rem;
+    }
+    .article-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.5rem;
+    }
+    .card {
+      background-color: #fdfdfd;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 1.2rem;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.03);
+    }
+    .card h3 {
       margin-top: 0;
     }
-    .article-card a {
+    .card a {
       text-decoration: none;
-      color: #111;
       font-weight: 600;
+      color: #00b894;
     }
-    .article-card a:hover {
+    .card a:hover {
       text-decoration: underline;
     }
     footer {
-      background-color: #111;
-      color: white;
+      margin-top: 3rem;
+      padding: 1rem 0;
+      background-color: #f9f9f9;
+      border-top: 1px solid #ddd;
+      color: #666;
+      font-size: 0.9rem;
       text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
+    }
+    footer p {
+      margin: 0.5rem 0;
+    }
+    footer p em {
+      font-style: italic;
     }
   </style>
 </head>
@@ -70,26 +91,29 @@
     </nav>
   </header>
   <main>
-    <h2>Latest Articles</h2>
-
-    <div class="article-card">
-      <h3><a href="testosterone-guide.html">Ultimate Guide to Testosterone</a></h3>
-      <p>A deep dive into what testosterone is, why it matters, and how to naturally boost it.</p>
+    <h1>Latest Articles</h1>
+    <div class="article-grid">
+      <div class="card">
+        <h3><a href="foods-that-boost-testosterone.html">Top 5 Foods That Boost Testosterone</a></h3>
+        <p>Eggs, oysters, garlic, avocado oil, and fish oil — learn how these support hormone production.</p>
+      </div>
+      <div class="card">
+        <h3><a href="importance-of-sleep.html">Why Sleep Is Crucial for Testosterone</a></h3>
+        <p>Sleep is when testosterone is made. Without it, you're leaving gains on the table.</p>
+      </div>
+      <div class="card">
+        <h3><a href="testosterone-and-training.html">Best Training Style for T-Level Boost</a></h3>
+        <p>Use heavy compound lifts and intense bursts to spike testosterone naturally.</p>
+      </div>
+      <div class="card">
+        <h3><a href="morning-routine.html">A Testosterone-Optimized Morning Routine</a></h3>
+        <p>Set the tone with sunlight, protein, and powerful daily habits.</p>
+      </div>
     </div>
-
-    <div class="article-card">
-      <h3><a href="foods-that-boost-testosterone.html">Top 10 Foods That Boost T</a></h3>
-      <p>Eat your way to hormonal balance with these research-backed testosterone-friendly foods.</p>
-    </div>
-
-    <div class="article-card">
-      <h3><a href="fitness-routine-for-men.html">Best Fitness Routine for Men in Their 20s & 30s</a></h3>
-      <p>Want to build muscle, shred fat, and optimize your hormones? Start here.</p>
-    </div>
-
   </main>
   <footer>
-    &copy; 2025 TestoFit. All rights reserved.
+    <p><em>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</em></p>
+    <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
 </html>
