--- a/articles.html
+++ b/articles.html
@@ -95,19 +95,15 @@
     <div class="article-grid">
       <div class="card">
         <h3><a href="foods-that-boost-testosterone.html">Top 5 Foods That Boost Testosterone</a></h3>
-        <p>Eggs, oysters, garlic, avocado oil, and fish oil — learn how these support hormone production.</p>
+        <p>Eggs, oysters, garlic, avocado oil, and fish oil — learn how these support hormone production naturally.</p>
       </div>
       <div class="card">
-        <h3><a href="importance-of-sleep.html">Why Sleep Is Crucial for Testosterone</a></h3>
-        <p>Sleep is when testosterone is made. Without it, you're leaving gains on the table.</p>
+        <h3><a href="fitness-routine-for-men.html">Testosterone-Optimized Fitness Routine</a></h3>
+        <p>Learn how to structure your workouts and daily habits to naturally boost testosterone and energy.</p>
       </div>
       <div class="card">
-        <h3><a href="testosterone-and-training.html">Best Training Style for T-Level Boost</a></h3>
-        <p>Use heavy compound lifts and intense bursts to spike testosterone naturally.</p>
-      </div>
-      <div class="card">
-        <h3><a href="morning-routine.html">A Testosterone-Optimized Morning Routine</a></h3>
-        <p>Set the tone with sunlight, protein, and powerful daily habits.</p>
+        <h3><a href="testosterone-guide.html">Complete Beginner's Guide to Testosterone</a></h3>
+        <p>Everything you need to know: symptoms of low T, natural solutions, and when to consider TRT.</p>
       </div>
     </div>
   </main>
