--- a/foods-that-boost-testosterone.html
+++ b/foods-that-boost-testosterone.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Top 5 Foods That Boost Testosterone - TestoFit</title>
+  <title>Top 5 Foods That Boost Testosterone | TestoFit</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -37,28 +37,24 @@
     }
     h1 {
       margin-top: 0;
+      font-weight: 800;
+      font-size: 2rem;
     }
-    p {
-      line-height: 1.6;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    li {
-      margin-bottom: 1rem;
-    }
-    .affiliate-link {
+    a.btn {
       display: inline-block;
-      background: #111;
-      color: #fff;
-      padding: 8px 16px;
-      border-radius: 5px;
+      background-color: #00b894;
+      color: white;
+      padding: 10px 15px;
+      margin-top: 8px;
       text-decoration: none;
-      font-weight: 600;
-      margin-top: 5px;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+    a.btn:hover {
+      background-color: #019875;
     }
     footer {
-      margin-top: 2rem;
+      margin-top: 3rem;
       padding: 1rem 0;
       background-color: #f9f9f9;
       border-top: 1px solid #ddd;
@@ -86,32 +82,31 @@
   </header>
   <main>
     <h1>Top 5 Foods That Boost Testosterone</h1>
-    <p>Boost your testosterone naturally with these nutrient-rich foods. Here are the top five foods known to support healthy testosterone levels:</p>
-    <ul>
-      <li>
-        <strong>Eggs</strong> – Vital Farms Pasture-Raised Eggs provide natural protein and cholesterol needed for hormone production.  
-        <a href="https://www.amazon.com/dp/B01MZHDHVM?tag=testofit-20" target="_blank" rel="noopener noreferrer" class="affiliate-link">Buy Vital Farms Eggs on Amazon</a>
-      </li>
-      <li>
-        <strong>Oysters</strong> – Crown Prince Natural Smoked Oysters are packed with zinc, a key mineral for testosterone synthesis.  
-        <a href="https://www.amazon.com/dp/B004XM4LEW?tag=testofit-20" target="_blank" rel="noopener noreferrer" class="affiliate-link">Shop Smoked Oysters on Amazon</a>
-      </li>
-      <li>
-        <strong>Fatty Fish (Omega-3)</strong> – Nature Made Omega-3 Softgels support hormone balance and heart health.  
-        <a href="https://www.amazon.com/dp/B0046XC528?tag=testofit-20" target="_blank" rel="noopener noreferrer" class="affiliate-link">Buy Nature Made Fish Oil</a>
-      </li>
-      <li>
-        <strong>Avocado Oil</strong> – BetterBody Foods Refined Avocado Oil provides healthy fats beneficial for hormone health.  
-        <a href="https://www.amazon.com/dp/B01IQ00B04?tag=testofit-20" target="_blank" rel="noopener noreferrer" class="affiliate-link">Shop Avocado Oil on Amazon</a>
-      </li>
-      <li>
-        <strong>Garlic Supplement</strong> – NOW Supplements Garlic Oil 1500 mg supports cortisol reduction and hormone balance.  
-        <a href="https://www.amazon.com/dp/B000MGOXAA?tag=testofit-20" target="_blank" rel="noopener noreferrer" class="affiliate-link">Buy Garlic Oil Supplements</a>
-      </li>
-    </ul>
+    <p>If you want to naturally increase your testosterone, start with your diet. These five nutrient-dense foods help support hormone production, energy, and recovery.</p>
+
+    <h2>1. Vital Farms Pasture-Raised Eggs</h2>
+    <p>Eggs contain healthy fats, protein, and cholesterol — a building block for testosterone. Pasture-raised eggs are richer in omega-3s and vitamin D.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B01MZHDHVM?tag=testofit-20" target="_blank">Buy on Amazon</a>
+
+    <h2>2. Crown Prince Smoked Oysters</h2>
+    <p>Oysters are extremely high in zinc, a mineral essential for testosterone production. Just a few can meet your daily requirement.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B004XM4LEW?tag=testofit-20" target="_blank">Buy on Amazon</a>
+
+    <h2>3. Nature Made Fish Oil (Omega-3)</h2>
+    <p>Omega-3 fatty acids reduce inflammation, support heart health, and may help balance testosterone levels naturally over time.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B0046XC528?tag=testofit-20" target="_blank">Buy on Amazon</a>
+
+    <h2>4. BetterBody Avocado Oil</h2>
+    <p>Healthy fats like those in avocado oil support hormone production and absorption of fat-soluble vitamins critical to endocrine health.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B01IQ00B04?tag=testofit-20" target="_blank">Buy on Amazon</a>
+
+    <h2>5. NOW Garlic Extract Supplement</h2>
+    <p>Garlic may increase testosterone while lowering cortisol. It also supports immune health and blood flow.</p>
+    <a class="btn" href="https://www.amazon.com/dp/B000MGOXAA?tag=testofit-20" target="_blank">Buy on Amazon</a>
   </main>
+
   <footer>
-    <p><em>Disclosure: Some links are affiliate links. Purchases may earn us a commission at no extra cost to you.</em></p>
+    <p><em>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</em></p>
     <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
