--- a/foods-that-boost-testosterone.html
+++ b/foods-that-boost-testosterone.html
@@ -82,27 +82,29 @@
   </header>
   <main>
     <h1>Top 5 Foods That Boost Testosterone</h1>
-    <p>If you want to naturally increase your testosterone, start with your diet. These five nutrient-dense foods help support hormone production, energy, and recovery.</p>
+    <p>Testosterone is a key hormone responsible for muscle growth, libido, energy, and overall health in both men and women. While many look to supplements or prescriptions, food is one of the most effective and natural ways to support healthy testosterone production. Below are five foods with scientifically backed benefits, including links to trusted products so you can start incorporating them into your routine today.</p>
 
     <h2>1. Vital Farms Pasture-Raised Eggs</h2>
-    <p>Eggs contain healthy fats, protein, and cholesterol — a building block for testosterone. Pasture-raised eggs are richer in omega-3s and vitamin D.</p>
+    <p>Eggs are rich in high-quality protein and healthy fats, especially cholesterol — a precursor to testosterone synthesis. Pasture-raised eggs have better nutrient profiles, offering more omega-3s, vitamin D, and antioxidants compared to conventional eggs. Vitamin D in particular is directly linked to improved testosterone levels in men.</p>
     <a class="btn" href="https://www.amazon.com/dp/B01MZHDHVM?tag=testofit-20" target="_blank">Buy on Amazon</a>
 
     <h2>2. Crown Prince Smoked Oysters</h2>
-    <p>Oysters are extremely high in zinc, a mineral essential for testosterone production. Just a few can meet your daily requirement.</p>
+    <p>Oysters are the highest natural source of zinc, an essential mineral involved in testosterone production, immune function, and sexual health. Zinc deficiency is directly associated with low testosterone. A single serving of oysters can provide over 500% of your daily zinc needs.</p>
     <a class="btn" href="https://www.amazon.com/dp/B004XM4LEW?tag=testofit-20" target="_blank">Buy on Amazon</a>
 
     <h2>3. Nature Made Fish Oil (Omega-3)</h2>
-    <p>Omega-3 fatty acids reduce inflammation, support heart health, and may help balance testosterone levels naturally over time.</p>
+    <p>Omega-3 fatty acids help reduce inflammation, improve blood flow, and support brain and heart health. Chronically high inflammation can interfere with testosterone production, and omega-3s help mitigate that. They also assist in healthy fat metabolism — another key part of hormonal balance.</p>
     <a class="btn" href="https://www.amazon.com/dp/B0046XC528?tag=testofit-20" target="_blank">Buy on Amazon</a>
 
     <h2>4. BetterBody Avocado Oil</h2>
-    <p>Healthy fats like those in avocado oil support hormone production and absorption of fat-soluble vitamins critical to endocrine health.</p>
+    <p>Avocado oil is packed with monounsaturated fats, which are the healthiest fats for testosterone production. It’s also a great source of vitamin E, an antioxidant that helps protect hormone-producing glands and supports overall metabolic health. Use it for cooking or as a salad dressing base.</p>
     <a class="btn" href="https://www.amazon.com/dp/B01IQ00B04?tag=testofit-20" target="_blank">Buy on Amazon</a>
 
     <h2>5. NOW Garlic Extract Supplement</h2>
-    <p>Garlic may increase testosterone while lowering cortisol. It also supports immune health and blood flow.</p>
+    <p>Garlic isn’t just for flavor — research shows it may boost testosterone while lowering cortisol, the stress hormone. High cortisol levels suppress testosterone, so balancing both is key. Garlic also supports heart health and nitric oxide production, improving circulation and nutrient delivery.</p>
     <a class="btn" href="https://www.amazon.com/dp/B000MGOXAA?tag=testofit-20" target="_blank">Buy on Amazon</a>
+
+    <p><strong>Remember:</strong> Nutrition is just one pillar of hormone health. Combine these foods with quality sleep, resistance training, and stress management for the best results.</p>
   </main>
 
   <footer>
