--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TestoFit - Natural Testosterone & Fitness Tips</title>
+  <title>TestoFit | Your Guide to Natural Testosterone & Fitness</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Outfit', sans-serif;
       margin: 0;
-      background-color: #f4f4f4;
+      background-color: #f2f2f2;
       color: #333;
     }
     header {
@@ -31,63 +31,27 @@
       max-width: 900px;
       margin: auto;
       padding: 2rem;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.05);
     }
     h1 {
-      margin-top: 0;
-      font-weight: 800;
       font-size: 2.5rem;
+      margin-bottom: 0.5rem;
     }
-    p {
-      font-size: 1.15rem;
-      line-height: 1.6;
+    h2 {
+      margin-top: 2rem;
+      font-size: 1.5rem;
     }
-    .featured-article {
-      background: #111;
-      color: white;
-      padding: 1.5rem;
-      border-radius: 10px;
-      margin-bottom: 2rem;
+    ul {
+      padding-left: 1rem;
     }
-    .featured-article h2 {
-      margin-top: 0;
+    ul li {
+      margin-bottom: 0.5rem;
     }
-    .btn {
-      background: #00b894;
-      color: white;
-      padding: 10px 20px;
+    a.article-link {
+      color: #007BFF;
       text-decoration: none;
       font-weight: 600;
-      border-radius: 6px;
-      display: inline-block;
-      margin-top: 10px;
     }
-    .btn:hover {
-      background: #019875;
-    }
-    .article-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 1.5rem;
-    }
-    .card {
-      background-color: #fdfdfd;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 1.2rem;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.03);
-    }
-    .card h3 {
-      margin-top: 0;
-    }
-    .card a {
-      text-decoration: none;
-      font-weight: 600;
-      color: #00b894;
-    }
-    .card a:hover {
+    a.article-link:hover {
       text-decoration: underline;
     }
     footer {
@@ -117,34 +81,26 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
     <h1>Welcome to TestoFit</h1>
-    <p>Your go-to source for natural testosterone tips, fitness insights, and tools to help you build a stronger, better version of yourself.</p>
+    <p>Your trusted resource for natural testosterone optimization, fitness, and overall health. Our goal is to help you learn, grow, and take action on improving your body and mind.</p>
 
-    <section class="featured-article">
-      <h2>🔥 Featured: Top 5 Foods That Boost Testosterone</h2>
-      <p>Discover the best foods to naturally support testosterone — including eggs, oysters, garlic supplements, and more.</p>
-      <a href="foods-that-boost-testosterone.html" class="btn" target="_blank" rel="noopener noreferrer">Read the Article</a>
-    </section>
+    <h2>Featured Articles</h2>
+    <ul>
+      <li><a class="article-link" href="foods-that-boost-testosterone.html">Top 5 Foods That Boost Testosterone</a></li>
+      <li><a class="article-link" href="fitness-routine-for-men.html">The Ultimate Fitness Routine for Men</a></li>
+      <li><a class="article-link" href="testosterone-guide.html">Beginner's Guide to Testosterone</a></li>
+    </ul>
 
-    <section>
-      <h2>More Articles</h2>
-      <div class="article-grid">
-        <div class="card">
-          <h3><a href="importance-of-sleep.html">Why Sleep Is Crucial for Testosterone</a></h3>
-          <p>Lack of sleep kills testosterone production. Here's what to do about it.</p>
-        </div>
-        <div class="card">
-          <h3><a href="testosterone-and-training.html">Best Training Style for T-Level Boost</a></h3>
-          <p>Build your workouts around movements that naturally increase testosterone.</p>
-        </div>
-        <div class="card">
-          <h3><a href="morning-routine.html">A Testosterone-Optimized Morning Routine</a></h3>
-          <p>Start your day like a high-performer. Light, movement, protein — here's how.</p>
-        </div>
-      </div>
-    </section>
+    <h2>More Articles</h2>
+    <ul>
+      <li><a class="article-link" href="about.html">About TestoFit</a></li>
+      <li><a class="article-link" href="articles.html">All Articles</a></li>
+      <li><a class="article-link" href="contact.html">Contact Us</a></li>
+    </ul>
   </main>
+
   <footer>
     <p><em>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</em></p>
     <p>&copy; 2025 TestoFit. All rights reserved.</p>
