--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TestoFit | Your Guide to Natural Testosterone & Fitness</title>
+  <title>TestoFit | Natural Testosterone & Fitness</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Outfit', sans-serif;
       margin: 0;
-      background-color: #f2f2f2;
+      background-color: #f4f4f4;
       color: #333;
     }
     header {
@@ -28,26 +28,33 @@
       text-decoration: underline;
     }
     main {
-      max-width: 900px;
+      max-width: 800px;
       margin: auto;
       padding: 2rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.05);
     }
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
+      font-weight: 800;
+      font-size: 2rem;
+      margin-top: 0;
     }
     h2 {
       margin-top: 2rem;
-      font-size: 1.5rem;
+      font-weight: 600;
+      font-size: 1.3rem;
+      border-bottom: 2px solid #00b894;
+      padding-bottom: 0.3rem;
     }
     ul {
-      padding-left: 1rem;
+      padding-left: 1.2rem;
     }
     ul li {
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.6rem;
     }
     a.article-link {
-      color: #007BFF;
+      color: #00b894;
       text-decoration: none;
       font-weight: 600;
     }
@@ -84,7 +91,7 @@
 
   <main>
     <h1>Welcome to TestoFit</h1>
-    <p>Your trusted resource for natural testosterone optimization, fitness, and overall health. Our goal is to help you learn, grow, and take action on improving your body and mind.</p>
+    <p>Your trusted resource for natural testosterone optimization, fitness, and overall health. Learn, grow, and take action on improving your body and mind.</p>
 
     <h2>Featured Articles</h2>
     <ul>
