--- a/index.html
+++ b/index.html
@@ -9,72 +9,84 @@
     body {
       font-family: 'Outfit', sans-serif;
       margin: 0;
-      background-color: #f4f4f4;
-      color: #333;
+      background-color: #e8f5f2;
+      color: #222;
     }
     header {
-      background-color: #111;
+      background: linear-gradient(135deg, #00b894, #019875);
       color: white;
-      padding: 1rem;
+      padding: 1.5rem 1rem;
       text-align: center;
+      box-shadow: 0 4px 8px rgba(0,184,148,0.4);
     }
     nav a {
       color: white;
-      margin: 0 15px;
+      margin: 0 18px;
       text-decoration: none;
-      font-weight: 600;
+      font-weight: 700;
+      font-size: 1.1rem;
+      padding: 6px 14px;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+      display: inline-block;
     }
     nav a:hover {
-      text-decoration: underline;
+      background-color: rgba(255, 255, 255, 0.25);
     }
     main {
-      max-width: 800px;
-      margin: auto;
-      padding: 2rem;
+      max-width: 820px;
+      margin: 2.5rem auto 4rem;
+      padding: 2.5rem 3rem;
       background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.05);
+      border-radius: 14px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+      line-height: 1.6;
     }
     h1 {
-      font-weight: 800;
-      font-size: 2rem;
+      font-weight: 900;
+      font-size: 2.8rem;
       margin-top: 0;
+      color: #01684b;
     }
     h2 {
-      margin-top: 2rem;
-      font-weight: 600;
-      font-size: 1.3rem;
-      border-bottom: 2px solid #00b894;
-      padding-bottom: 0.3rem;
+      margin-top: 2.8rem;
+      font-weight: 700;
+      font-size: 1.6rem;
+      border-bottom: 3px solid #00b894;
+      padding-bottom: 0.35rem;
+      color: #017a55;
     }
     ul {
-      padding-left: 1.2rem;
+      padding-left: 1.4rem;
     }
     ul li {
-      margin-bottom: 0.6rem;
+      margin-bottom: 0.75rem;
+      font-size: 1.05rem;
     }
     a.article-link {
-      color: #00b894;
+      color: #019875;
       text-decoration: none;
-      font-weight: 600;
+      font-weight: 700;
+      transition: color 0.3s ease;
     }
     a.article-link:hover {
+      color: #00865a;
       text-decoration: underline;
     }
     footer {
-      margin-top: 3rem;
-      padding: 1rem 0;
-      background-color: #f9f9f9;
-      border-top: 1px solid #ddd;
-      color: #666;
-      font-size: 0.9rem;
+      margin-top: 4rem;
+      padding: 1.2rem 0;
+      background-color: #d9ede9;
+      border-top: 1px solid #a7d4c8;
+      color: #01684b;
+      font-size: 0.95rem;
       text-align: center;
+      font-style: italic;
+      font-weight: 600;
+      letter-spacing: 0.02em;
     }
     footer p {
-      margin: 0.5rem 0;
-    }
-    footer p em {
-      font-style: italic;
+      margin: 0.4rem 0;
     }
   </style>
 </head>
@@ -109,7 +121,7 @@
   </main>
 
   <footer>
-    <p><em>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</em></p>
+    <p>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</p>
     <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
