--- a/fitness-routine-for-men.html
+++ b/fitness-routine-for-men.html
@@ -2,16 +2,113 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fitness Routine for Men | TestoFit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>The Ultimate Fitness Routine for Men | TestoFit</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <style>
-    body { font-family: 'Outfit', sans-serif; margin: 0; background: #f4f4f4; color: #333; }
-    header, footer { background: #111; color: white; text-align: center; padding: 1rem; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; }
-    nav a:hover { text-decoration: underline; }
-    main { max-width: 800px; margin: auto; padding: 2rem; background: white; border-radius: 10px; box-shadow: 0 0 8px rgba(0,0,0,0.05); }
-    h1 { margin-top: 0; }
+    body {
+      font-family: 'Outfit', sans-serif;
+      margin: 0;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background: linear-gradient(135deg, #00b894, #019875);
+      color: white;
+      padding: 1.5rem 1rem;
+      text-align: center;
+      box-shadow: 0 4px 8px rgba(0,184,148,0.4);
+    }
+    nav a {
+      color: white;
+      margin: 0 18px;
+      text-decoration: none;
+      font-weight: 700;
+      font-size: 1.1rem;
+      padding: 6px 14px;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+      display: inline-block;
+    }
+    nav a:hover {
+      background-color: rgba(255, 255, 255, 0.25);
+    }
+    main {
+      max-width: 850px;
+      margin: 2.5rem auto 4rem;
+      padding: 2.5rem 3rem;
+      background: white;
+      border-radius: 14px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+      line-height: 1.6;
+    }
+    h1 {
+      font-weight: 900;
+      font-size: 2.8rem;
+      margin-top: 0;
+      color: #01684b;
+    }
+    h2 {
+      margin-top: 2.8rem;
+      font-weight: 700;
+      font-size: 1.6rem;
+      border-bottom: 3px solid #00b894;
+      padding-bottom: 0.35rem;
+      color: #017a55;
+    }
+    h3 {
+      margin-top: 1.8rem;
+      font-weight: 600;
+      font-size: 1.3rem;
+      color: #019875;
+    }
+    p {
+      margin-top: 0.6rem;
+    }
+    ul {
+      padding-left: 1.4rem;
+    }
+    ul li {
+      margin-bottom: 0.7rem;
+      font-size: 1.05rem;
+    }
+    a.article-link, a.product-link {
+      color: #019875;
+      text-decoration: none;
+      font-weight: 700;
+      transition: color 0.3s ease;
+    }
+    a.article-link:hover, a.product-link:hover {
+      color: #00865a;
+      text-decoration: underline;
+    }
+    .product-link {
+      font-weight: 600;
+      font-size: 1rem;
+    }
+    footer {
+      margin-top: 4rem;
+      padding: 1.2rem 0;
+      background-color: #d9ede9;
+      border-top: 1px solid #a7d4c8;
+      color: #01684b;
+      font-size: 0.95rem;
+      text-align: center;
+      font-style: italic;
+      font-weight: 600;
+      letter-spacing: 0.02em;
+    }
+    footer p {
+      margin: 0.4rem 0;
+    }
+    .note {
+      background-color: #e6f5f2;
+      border-left: 5px solid #00b894;
+      padding: 0.8rem 1rem;
+      margin: 1.2rem 0;
+      font-style: italic;
+      color: #01684b;
+    }
   </style>
 </head>
 <body>
@@ -24,23 +121,98 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
-    <h1>Best Fitness Routine for Men in Their 20s & 30s</h1>
-    <p>Want to build strength, boost testosterone, and look your best? Here's a simple weekly routine optimized for men looking to improve physically and hormonally:</p>
-    <h2>Weekly Plan</h2>
+    <h1>The Ultimate Fitness Routine for Men</h1>
+    <p>This comprehensive routine is designed to boost natural testosterone production, build muscle, and improve overall health. We focus on compound lifts, proper form, and smart recovery. Whether you’re new to lifting or looking to optimize your workout, this guide covers everything you need.</p>
+
+    <h2>1. Warm-Up & Mobility</h2>
+    <p>Begin every session with 10-15 minutes of light cardio (jump rope, brisk walking) and dynamic stretches to prepare your muscles and joints for lifting. Focus on mobility drills targeting hips, shoulders, and thoracic spine.</p>
+
+    <h2>2. Core Compound Lifts</h2>
+    <p>These exercises activate large muscle groups and stimulate testosterone release effectively.</p>
+
+    <h3>Squats</h3>
+    <p>Targets quads, glutes, hamstrings, and core. Fundamental for overall strength.</p>
     <ul>
-      <li><strong>Monday:</strong> Upper body push (bench, overhead press)</li>
-      <li><strong>Tuesday:</strong> Lower body (squat, deadlift, lunges)</li>
-      <li><strong>Wednesday:</strong> Active recovery (walk, yoga)</li>
-      <li><strong>Thursday:</strong> Upper body pull (pull-ups, rows)</li>
-      <li><strong>Friday:</strong> HIIT cardio + core</li>
-      <li><strong>Saturday:</strong> Full body circuit</li>
-      <li><strong>Sunday:</strong> Rest or light movement</li>
+      <li>3-4 sets of 6-8 reps</li>
+      <li>Keep chest up, back neutral, knees tracking toes</li>
     </ul>
-    <p>Pair this with 7–9 hours of sleep, quality nutrition, and low stress for optimal results.</p>
+    <p><a class="product-link" href="https://www.amazon.com/dp/B08C4VP48V?tag=testofit-20" target="_blank" rel="noopener noreferrer">Recommended: Rogue Fitness Squat Rack</a></p>
+
+    <h3>Deadlifts</h3>
+    <p>Engages posterior chain — hamstrings, glutes, lower back, traps.</p>
+    <ul>
+      <li>3 sets of 5 reps</li>
+      <li>Maintain flat back, drive through heels</li>
+    </ul>
+    <p><a class="product-link" href="https://www.amazon.com/dp/B07TJH77D6?tag=testofit-20" target="_blank" rel="noopener noreferrer">Recommended: CAP Barbell Olympic Hex Dumbbells</a></p>
+
+    <h3>Bench Press</h3>
+    <p>Builds chest, shoulders, and triceps.</p>
+    <ul>
+      <li>3-4 sets of 6-8 reps</li>
+      <li>Keep wrists straight, control descent</li>
+    </ul>
+    <p><a class="product-link" href="https://www.amazon.com/dp/B07W6PSF4P?tag=testofit-20" target="_blank" rel="noopener noreferrer">Recommended: Fitness Reality Weight Bench</a></p>
+
+    <h3>Overhead Press</h3>
+    <p>Targets shoulders and triceps, promotes upper body strength.</p>
+    <ul>
+      <li>3 sets of 6-8 reps</li>
+      <li>Keep core tight and avoid arching lower back</li>
+    </ul>
+    <p><a class="product-link" href="https://www.amazon.com/dp/B01M6M9KBS?tag=testofit-20" target="_blank" rel="noopener noreferrer">Recommended: CAP Barbell Olympic Weight Plates</a></p>
+
+    <h2>3. Accessory Work</h2>
+    <p>Complement the big lifts with accessory exercises that strengthen smaller muscles and improve stability.</p>
+    <ul>
+      <li><strong>Pull-ups or Lat Pulldown:</strong> For back and biceps</li>
+      <li><strong>Barbell or Dumbbell Rows:</strong> Strengthen upper and mid-back</li>
+      <li><strong>Leg Curls or Romanian Deadlifts:</strong> Hamstring focus</li>
+      <li><strong>Bicep Curls & Tricep Extensions:</strong> Arm definition and strength</li>
+      <li><strong>Planks & Hanging Leg Raises:</strong> Core stability</li>
+    </ul>
+
+    <h2>4. Recovery & Rest</h2>
+    <p>Testosterone production and muscle growth require adequate recovery:</p>
+    <ul>
+      <li>Sleep 7-9 hours nightly</li>
+      <li>Maintain balanced nutrition rich in protein, healthy fats, and micronutrients</li>
+      <li>Use active recovery days (light walking, yoga)</li>
+      <li>Stretch and foam roll to reduce soreness and improve flexibility</li>
+    </ul>
+
+    <div class="note">
+      <strong>Pro tip:</strong> Consistency is key. Progressively increase weight or reps every 1-2 weeks to keep challenging your body and boost hormone response.
+    </div>
+
+    <h2>5. Sample Weekly Plan</h2>
+    <p>A balanced split targeting all major muscle groups:</p>
+    <ul>
+      <li><strong>Monday:</strong> Squat focus + accessory lower body</li>
+      <li><strong>Tuesday:</strong> Bench press + upper body accessories</li>
+      <li><strong>Wednesday:</strong> Rest or active recovery</li>
+      <li><strong>Thursday:</strong> Deadlifts + posterior chain accessories</li>
+      <li><strong>Friday:</strong> Overhead press + upper body accessories</li>
+      <li><strong>Saturday & Sunday:</strong> Rest, mobility, light cardio</li>
+    </ul>
+
+    <h2>Recommended Gear & Equipment</h2>
+    <ul>
+      <li><a class="product-link" href="https://www.amazon.com/dp/B08C4VP48V?tag=testofit-20" target="_blank" rel="noopener noreferrer">Rogue Fitness Squat Rack</a> — essential for heavy squats and safety</li>
+      <li><a class="product-link" href="https://www.amazon.com/dp/B07TJH77D6?tag=testofit-20" target="_blank" rel="noopener noreferrer">CAP Barbell Hex Dumbbells</a> — versatile weights for accessory lifts</li>
+      <li><a class="product-link" href="https://www.amazon.com/dp/B07W6PSF4P?tag=testofit-20" target="_blank" rel="noopener noreferrer">Fitness Reality Weight Bench</a> — adjustable bench for presses and rows</li>
+      <li><a class="product-link" href="https://www.amazon.com/dp/B01M6M9KBS?tag=testofit-20" target="_blank" rel="noopener noreferrer">CAP Olympic Weight Plates</a> — quality plates to build your home gym</li>
+      <li><a class="product-link" href="https://www.amazon.com/dp/B07TSKV6LC?tag=testofit-20" target="_blank" rel="noopener noreferrer">Fit Simplify Resistance Bands</a> — great for warm-ups, mobility, and accessory work</li>
+    </ul>
+
+    <p>Remember, a well-rounded fitness routine not only builds muscle but supports healthy testosterone and overall vitality.</p>
   </main>
+
   <footer>
-    &copy; 2025 TestoFit. All rights reserved.
+    <p>Disclosure: Some links are affiliate links. We may earn a commission if you purchase through them, at no extra cost to you.</p>
+    <p>&copy; 2025 TestoFit. All rights reserved.</p>
   </footer>
 </body>
 </html>
